kubernetes/overlays/local/static/ingress-nginx/basic-authentication.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  name: basic-authentication
  namespace: static
spec:
  rules:
    - host: argo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
    - host: docker-registry.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry-ui
                port:
                  number: 80
    - host: kubernetes-dashboard.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
    - host: mongo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoku
                port:
                  number: 3100
