kubernetes/overlays/local/static/ingress-nginx/default.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  name: default
  namespace: static
spec:
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: cdn.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: ci.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-ci
                port:
                  number: 8001
    - host: docker-registry.localhost
      http:
        paths:
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: minio.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: rabbitmq.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
    - host: verdaccio.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verdaccio-internal
                port:
                  number: 4873
    - host: wss.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wss
                port:
                  number: 3000
    - host: www.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-ui
                port:
                  number: 80
